Update article index to support QCers
- List QCers for an article last
- If too many contributors hide some that can be expanded

While I'm at it, remove the redirect this script forced previously.

--- a/old-scms-content/articles/articles-index.css
+++ b/old-scms-content/articles/articles-index.css
@@ -1,4 +1,4 @@
-/* /articles/articles-index.css 
+/* /articles/articles-index.css
  * By anto (http://www.smogon.com/forums/members/anto.222754/) and Quarkz (http://www.smogon.com/forums/members/quarkz.206020/)
  * Please remember that this is a .scss file and all edits should be reflected
  * in the articles-index.css file when edits are made. This file is purely for
@@ -150,4 +150,11 @@
   font-family: monospace;
   font-size: 0.9em;
   text-align: center;
+}
+#body #articleIndex .moreContributors {
+  cursor: pointer;
+  font-style: italic;
+}
+#body #articleIndex .moreContributors:hover {
+  text-decoration: underline;
 }
